--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -86,6 +86,7 @@ jobs:
             result: ${{ job.status }}
             digest: ${{ steps.docker_build.outputs.digest }}
         steps:
+            - uses: actions/checkout@v2
             - name: Download API
               uses: actions/download-artifact@v2
               with:
@@ -104,6 +105,7 @@ jobs:
               uses: docker/setup-qemu-action@v1
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v1
+              id: builder
             - name: Login to DockerHub
               uses: docker/login-action@v1
               with:
@@ -113,6 +115,7 @@ jobs:
               id: docker_build
               uses: docker/build-push-action@v2.7.0
               with:
+                  builder: ${{ steps.builder.outputs.name }}
                   context: .
                   push: true
                   tags: ${{ steps.meta.outputs.tags }}
